--- a/src/Client/_Imports.razor
+++ b/src/Client/_Imports.razor
@@ -6,5 +6,5 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
-@using finance_wallet.Client
-@using finance_wallet.Client.Shared
+@using Client
+@using Client.Shared
